--- a/docs/Квиз/Квиз.md
+++ b/docs/Квиз/Квиз.md
@@ -1,6 +1,6 @@
 # Квиз
 
-Платформы и технологии: Unity, Бэкенд, Веб, Десктоп, ИИ, Мобилка
+Платформы и технологии: Бэкенд, Веб, Десктоп, ИИ, Мобилка
 
 # Задание
 
