Update Рандомайзер по аудиториям.md

--- a/docs/Рандомайзер по аудиториям.md
+++ b/docs/Рандомайзер по аудиториям.md
@@ -1,6 +1,6 @@
 # Рандомайзер по аудиториям
 
-Платформы и технологии: Python, Веб, Десктоп, Мобилка
+Платформы и технологии: Веб, Десктоп, Мобилка
 
 # Задача
 
